--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
     "cypress": "^1.4.1",
     "cypress-hyperapp-unit-test": "^1.3.0",
+    "firebase": "^4.10.1",
     "hyperapp": "^1.0.0",
     "mini.css": "^2.3.7"
   },
